fix: Normalize editor text style in dark mode

--- a/frappe/public/scss/dark.scss
+++ b/frappe/public/scss/dark.scss
@@ -42,4 +42,11 @@
 			background-color: var(--bg-color);
 		}
 	}
+
+	.ql-editor.read-mode {
+		span, p, u {
+			background-color: inherit !important;
+			color: inherit !important;
+		}
+	}
 }
